--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div align="center">
-    <table bgcolor="black" color="white" width="100%">
+    <table color="white" width="100%">
         <tr>
             <td>EPAPER</td>
             <td>LIVE TV</td>
