--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                 </article>
                 <hr>
                 <article>
-                    <h3>Trump takes election pitch to storied New York arena</h3>
+                    <h3>Harris to rally where Trump riled Capitol riot crowd</h3>
                     <table>
                         <tr>
-                            <td><img height="80" src="img/271739097f7f545.jpg" alt=""></td>
-                                <td><p>Haris campaigning in Pennsylvania as both <br> candidates seek to win over swing states.</p>
-                                <p>Published about an hour ago</p></td>
+                            <td><img height="80" src="https://i.dawn.com/medium/2024/10/29193713a8135c6.jpg?r=195052" alt=""></td>
+                                <td><p>The first female, Black and Asian American <br> vice president in US history will rely heavily <br> on visuals of being within sight of the White <br> House.</p>
+                                <p>Published about 2 hours ago</p></td>
                     
                         </tr>
                     </table>
@@ -103,12 +103,12 @@
                 </article>
                 <hr>
                 <article>
-                    <h3>Trump takes election pitch to storied New York arena</h3>
+                    <h3>Pakistan vows boosting military ties with Russia: ISPR</h3>
                     <table>
                         <tr>
-                            <td><img height="80" src="img/271739097f7f545.jpg" alt=""></td>
-                                <td><p>Haris campaigning in Pennsylvania as both <br> candidates seek to win over swing states.</p>
-                                <p>Published about an hour ago</p></td>
+                            <td><img height="80" src="https://i.dawn.com/medium/2024/10/29174740f0cf387.jpg?r=182725" alt=""></td>
+                                <td><p>Russian minister visits Pakistan's air chief and naval chief to discuss military relations.</p>
+                                <p>Published about 4 hour ago</p></td>
                     
                         </tr>
                     </table>
