--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                 </article>
                 <hr>
                 <article>
-                    <h3>Trump takes election pitch to storied New York arena</h3>
+                    <h3>Mideast at ‘most dangerous juncture’ in decades: UN official</h3>
                     <table>
                         <tr>
-                            <td><img height="80" src="img/271739097f7f545.jpg" alt=""></td>
-                                <td><p>Haris campaigning in Pennsylvania as both <br> candidates seek to win over swing states.</p>
-                                <p>Published about an hour ago</p></td>
+                            <td><img height="80" src="https://i.dawn.com/medium/2024/10/29205239b470d69.jpg?r=205244" alt=""></td>
+                                <td><p>"Genocide is only possible because of <br> impunity," says Palestinian envoy to UN.</p>
+                                <p>upload about an hour ago</p></td>
                     
                         </tr>
                     </table>
