--- a/index.html
+++ b/index.html
@@ -258,13 +258,77 @@
             </td>
         </tr>
     </table>
-    <footer>
-        <table>
+    <footer align="center">
+        <table bgcolor="#033" width="100%">
             <tr>
-                <td>DAWN</td>
-                <td></td>
+                <td align="center"><h2>DAWN</h2></td>
+                <td colspan="5" align="end"><img width="2%" src="https://i.dawn.com/thumbnail/2024/02/080925032506f93.png" alt="">
+                <img width="2%" src="https://i.dawn.com/large/2024/02/16125537351049d.png" alt="">
+                <img width="2%" src="https://i.dawn.com/thumbnail/2019/02/5c611c42cf5e8.png" alt="">
+                <img width="2%" src="https://i.dawn.com/thumbnail/2019/02/5c611c430f9b2.png" alt="">
+                <img width="2%" src="https://i.dawn.com/thumbnail/2019/02/5c611c42d5669.png" alt="">
+                <img width="2%" src="https://i.dawn.com/thumbnail/2019/02/5c611c42ce48d.png" alt="">
+                <img width="9%" src="https://i.dawn.com/thumbnail/2021/05/60a360ab86d68.png" alt="">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="6"><hr></td>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Contact</li>
+                        <li>Terms of Use</li>
+                        <li>Reproduction Copyrights</li>
+                        <li>Contribution Guidelines</li>
+                        <li>Privacy</li>
+                        <li>Comment Moderation</li>
+                        <li>Code of Ethics</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Subscribe to Newspaper</li>
+                        <li>Advertise on Dawn.com</li>
+                        <li>Sponsored Content</li>
+                        <li>Classifieds</li>
+                        <li>Obituaries</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Prayer Timings</li>
+                        <li>Stock/Forex/Gold</li>
+                        <li>Weather</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Dawn</li>
+                        <li>Herald</li>
+                        <li>Aurora</li>
+                        <li>Prism</li>
+                        <li>Special Reports</li>
+                        <li>Dawn News</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Images</li>
+                        <li>Eos/Icon/Young World</li>
+                        <li>Cityfm89</li>
+                        <li>Teeli</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Copyright © 2024, Dawn</li>
+                        <li>NewsKit Publishing Platform</li>
+                    </ul>
+                </td>
             </tr>
         </table>
+        <hr>
     </footer>
 </div>
 </body>
